--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>JS OUR TEAM</title>
 </head>
 <body>
-    <h1></h1>
-    <h2></h2>
-    <h3></h3>
+    <div id="contenuto">
+        
+    </div>
     <script src="./js/function.js"></script>
     <script src="./js/main.js">
     </script>
