m-bonus-2 added each member has his own card with characteristics

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <div id="contenuto">
-        
+
     </div>
+    <img src="./img/" alt="">
     <script src="./js/function.js"></script>
     <script src="./js/main.js">
     </script>
