M-BONUS 1 added exercise with all bonus

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>JS OUR TEAM</title>
 </head>
 <body>
-    <div id="contenuto">
+    <h1 class="p-2 bg-primary text-center">JS OUR TEAM</h1>
+    <div id="contenuto" class="d-flex flex-wrap p-4 justify-content-around">
 
     </div>
-    <img src="./img/" alt="">
     <script src="./js/function.js"></script>
     <script src="./js/main.js">
     </script>
